Fixed alignment issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,7 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: middle;}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -3119,7 +3119,6 @@ input, select, textarea {
 			#header nav a {
 				border: 0;
 				display: inline-block;
-				vertical-align: middle;
 				padding: 0 1em;
 			}
 
